# RtmAudioCore

./: CMakeLists.txt  README.md
libs/libRtmAudioCore/: CMakeLists.txt
libs/libRtmAudioCore/src/: librtmaudiocore_global.h
libs/libRtmAudioCore/src/core/: rtmaudiocore_export.h  rtmaudiocore_global.h
